--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -25,6 +25,7 @@ spec:
         - name: proxy
           image: your-registry/soap-proxy:latest
           imagePullPolicy: IfNotPresent
+          args: ["-config", "/etc/soap-proxy/config.yaml"]
           securityContext:
             runAsNonRoot: true
             runAsUser: 65532
@@ -51,6 +52,10 @@ spec:
             - name: ui
               containerPort: 8081
           volumeMounts:
+            - name: config
+              mountPath: /etc/soap-proxy/config.yaml
+              subPath: config.yaml
+              readOnly: true
             - name: mtls
               mountPath: /certs
               readOnly: true
@@ -69,6 +74,12 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 20
       volumes:
+        - name: config
+          configMap:
+            name: soap-proxy-config
+            items:
+              - key: config.yaml
+                path: config.yaml
         - name: mtls
           secret:
             secretName: soap-proxy-mtls
